--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,10 +6,11 @@ services:
     ports:
       - "8000:8000"
     volumes:
-      - .:/usr/src/app
-    depends_on: 
+      - .:/app
+    command: deno task dev
+    depends_on:
       - db
-    
+
   db:
     image: mysql
     command: --default-authentication-plugin=mysql_native_password
