--- a/deno.jsonc
+++ b/deno.jsonc
@@ -31,7 +31,8 @@
     "start": "deno run --allow-read=.env,.env.defaults --allow-net  app.ts",
     "debug": "deno run --inspect-brk app.ts",
     "server-timeout": "timeout 5 deno task start || exit 0",
-    "install-hooks": "vr",
+    "migrate": "deno run -A --unstable https://deno.land/x/nessie/cli.ts migrate",
+    "generate-migration": "deno run -A --unstable https://deno.land/x/nessie/cli.ts make ",
     "test": "deno test -A --ignore=.cache --no-prompt",
     "test-doc": "deno task test -- --doc",
     "test-watch": "deno task test -- --watch",
