--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,8 +12,9 @@ services:
     healthcheck:
       # test: ["CMD","curl", "--fail", "--silent", "--output", "/dev/null", "http://api:8000/health"]
       test: curl --fail http://localhost:8000/health || exit 1
-      interval: 30s
-      retries: 1
+      interval: 60s
+      # interval: 10s
+      retries: 2
       start_period: 2s
       timeout: 1s
     depends_on:
